refactor: remove lovable-tagger and update domain references
- Remove lovable-tagger dependency and related configuration
- Update domain references from oakolawole.com to oakolawole.ng
- Clean up package.json and remove unused README.md
- Update SEO component with new default og-image

--- a/index.html
+++ b/index.html
@@ -4,22 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>O.A. Kolawole & Co. | Trusted Legal Counsel</title>
-    <meta name="description" content="O.A. Kolawole & Co. is a full-service Nigerian law firm providing trusted legal counsel in Litigation, Corporate Law, Energy, Immigration and more." />
+    <meta
+      name="description"
+      content="O.A. Kolawole & Co. is a full-service Nigerian law firm providing trusted legal counsel in Litigation, Corporate Law, Energy, Immigration and more."
+    />
     <meta name="author" content="O.A. Kolawole & Co." />
 
-    <meta property="og:title" content="O.A. Kolawole & Co. | Trusted Legal Counsel" />
-    <meta property="og:description" content="Premium Nigerian law firm offering comprehensive legal services across Litigation, Corporate, Energy Law and Immigration." />
+    <meta
+      property="og:title"
+      content="O.A. Kolawole & Co. | Trusted Legal Counsel"
+    />
+    <meta
+      property="og:description"
+      content="Premium Nigerian law firm offering comprehensive legal services across Litigation, Corporate, Energy Law and Immigration."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://www.oakolawole.ng/og-image.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@OAKolawoleCo" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://www.oakolawole.ng/og-image.png"
+    />
+    <link rel="canonical" href="https://www.oakolawole.ng/" />
+    <meta
+      name="keywords"
+      content="Nigerian Law Firm, Abuja Lawyers, Corporate Law, Litigation, Energy Law, Immigration, Property Law"
+    />
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
