chore: update site assets and metadata for new domain
- Add Google site verification file for search console
- Update all references from www.oakolawoleandco.com to oakolawoleandco.com
- Add favicon, browserconfig.xml, and site.webmanifest for PWA support
- Update SEO component to use secure og image with enhanced metadata
- Add new team members and update existing team member details
- Regenerate sitemap with updated domain URLs

--- a/index.html
+++ b/index.html
@@ -21,16 +21,59 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://www.oakolawole.ng/og-image.png"
+      content="https://oakolawoleandco.com/og-image.png"
     />
+    <meta
+      property="og:image:url"
+      content="https://oakolawoleandco.com/og-image.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://oakolawoleandco.com/og-image.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@OAKolawoleCo" />
     <meta
       name="twitter:image"
-      content="https://www.oakolawole.ng/og-image.png"
+      content="https://oakolawoleandco.com/og-image.png"
     />
-    <link rel="canonical" href="https://www.oakolawole.ng/" />
+    <meta
+      name="twitter:image:src"
+      content="https://oakolawoleandco.com/og-image.png"
+    />
+    <!-- Favicons -->
+    <link
+      rel="icon"
+      href="https://oakolawoleandco.com/favicon.ico"
+      sizes="any"
+    />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://oakolawoleandco.com/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://oakolawoleandco.com/favicon-16x16.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://oakolawoleandco.com/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#0b1b3f" />
+    <meta name="msapplication-config" content="/browserconfig.xml" />
+    <meta name="theme-color" content="#0b1b3f" />
+    <link rel="canonical" href="https://oakolawoleandco.com/" />
     <meta
       name="keywords"
       content="Nigerian Law Firm, Abuja Lawyers, Corporate Law, Litigation, Energy Law, Immigration, Property Law"
