feat: update favicon and add og image assets
- Replace favicon.svg with simplified 'oe' monogram and updated gradient
- Add new og.png and 5.svg files for social sharing and branding
- Reorder favicon link tags in HTML for better compatibility

--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
       content="https://oakolawoleandco.com/og-image.png"
     />
     <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link
       rel="icon"
+      type="image/x-icon"
       href="https://oakolawoleandco.com/favicon.ico"
       sizes="any"
     />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link
       rel="icon"
       type="image/png"
